--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ sitemap: true
 author_profile: false
 ---
 
+<link rel="preload" href="https://tradeaudit.app/assets/finance.svg" as="image" />
 <div class="px-4 py-5 my-5 text-center">
   <h1 class="display-5 fw-bold">Stock Tracking for Twitter</h1>
   
