--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@ sitemap: true
 author_profile: false
 ---
 
-<link rel="preload" href="https://tradeaudit.app/assets/finance.svg" as="image" />
 <div class="px-4 py-5 my-5 text-center">
   <h1 class="display-5 fw-bold">Stock Tracking for Twitter</h1>
   
@@ -86,6 +85,7 @@ export class StockToolbar extends LitElement {
   static properties = {
       stocks: { type: Array, state: true },
       selectedStockSymbol: { type: String, state: true },
+      usersummaries: { type: Array, state: true, attribute: false },    
   };
 
   constructor() {
@@ -100,6 +100,7 @@ export class StockToolbar extends LitElement {
         .then(string => {
             console.log(string);
             this.stocks = string.stocks;
+            this.requestUpdate();
         })
     .catch(errorMsg => { console.log(errorMsg); });
 
@@ -121,6 +122,7 @@ export class StockToolbar extends LitElement {
                 </button>`
             )}
         </div>
+        <user-summary height="80" .selectedStockSymbol=${this.selectedStockSymbol} .usersummaries=${this.usersummaries}></user-summary>
     `;
   }
 
@@ -131,18 +133,18 @@ export class StockToolbar extends LitElement {
       this.selectedStockSymbol = stockSymbol;
     }
     var url = 'https://tradeaudit.app/assets/users.json';
+    const self = this;
 
     // Making our request
     fetch(url, { method: 'GET' })
         .then(Result => Result.json())
         .then(string => {
-            const usersummaries = document.getElementsByTagName('user-summary')[0];
             if(this.selectedStockSymbol != null){
-                usersummaries.usersummaries = string.users.filter(user => user.stocks.find(stock => stock.symbol === this.selectedStockSymbol) != null);
+                self.usersummaries = string.users.filter(user => user.stocks.find(stock => stock.symbol === this.selectedStockSymbol) != null);
             }else{
-                usersummaries.usersummaries = string.users;
+                self.usersummaries = string.users;
             }
-            usersummaries.selectedStockSymbol = this.selectedStockSymbol;
+            self.requestUpdate();
         })
     .catch(errorMsg => { console.log(errorMsg); });
   }
@@ -151,7 +153,7 @@ customElements.define('stock-toolbar', StockToolbar);
 
 export class UserSummary extends LitElement {
   static properties = {
-      usersummaries: { type: Array, state: true },
+      usersummaries: { type: Array, state: true, attribute: false },
       selectedStockSymbol: { type: String, state: true },
       height: { type: Number },
   };
@@ -167,7 +169,8 @@ export class UserSummary extends LitElement {
     return html`
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-        <ul class="list-group" id="stock-ul" style="max-width:800px;margin:auto;">
+       <link rel="preload" href="https://tradeaudit.app/assets/finance.svg" as="image" />
+       <ul class="list-group" id="stock-ul" style="max-width:800px;margin:auto;">
             ${(this.usersummaries ?? []).map(
               (item) => 
                 html`
@@ -206,5 +209,4 @@ customElements.define('user-summary', UserSummary);
   
   <stock-toolbar></stock-toolbar>
   
-  <user-summary height="80"></user-summary>
 </div>
