--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ author_profile: false
 <div class="px-4 py-5 my-5 text-center">
   <h1 class="display-5 fw-bold">Stock Tracking for Twitter</h1>
   
-  <p class="lead mb-4 container">Social media is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> with carefully curated twitter feeds promoting successful trades but hiding all losses.  Do your own due diligence and create audited trade records for accounts you follow before you invest your money.</p>
+  <p class="lead mb-4">Social media is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> with carefully curated twitter feeds promoting successful trades but hiding all losses.  Do your own due diligence and create audited trade records for accounts you follow before you invest your money.</p>
 
   <h2 class="display-10 fw-bold">Top User Ratings</h2>
 
@@ -104,7 +104,7 @@ export class UserSummary extends LitElement {
             ${(this.usersummaries ?? []).map(
               (item) => 
                 html`
-                <li class="list-group-item container" style="display:flex;align-items:center;">
+                <li class="list-group-item" style="display:flex;align-items:center;">
                     <div style="display:flex">
                         <img src="${item.twitterProfileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;"/>
                         <div style="text-align:left;padding-left:12px;margin-top:auto;margin-bottom:auto;">
