--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@ sitemap: true
 author_profile: false
 ---
 
-<div class="px-4 py-5 my-5 text-center">
-  <h1 class="display-5 fw-bold">Stock Tracking for Twitter</h1>
-  
-  <p class="lead mb-4">Social media is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> with carefully curated twitter feeds promoting successful trades but hiding all losses.  Do your own due diligence and create audited trade records for accounts you follow before you invest your money.</p>
+<h1 class="display-5 fw-bold text-center">Stock Tracking for Twitter</h1>
 
-  <h2 class="display-10 fw-bold">Top User Ratings</h2>
+<p class="lead mb-4">Social media is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> with carefully curated twitter feeds promoting successful trades but hiding all losses.  Do your own due diligence and create audited trade records for accounts you follow before you invest your money.</p>
 
-  <script type="module">
+<h2 class="display-10 fw-bold text-center">Top User Ratings</h2>
+
+<script type="module">
 import {LitElement, html, svg, css} from 'https://cdn.jsdelivr.net/gh/lit/dist@2/core/lit-core.min.js';
 
 export class PieChart extends LitElement {
@@ -205,8 +204,7 @@ export class StockToolbar extends LitElement {
   }
 }
 customElements.define('stock-toolbar', StockToolbar);
-  </script>
+</script>
+
+<stock-toolbar></stock-toolbar>
   
-  <stock-toolbar></stock-toolbar>
-  
-</div>
