--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@ export class UserSummary extends LitElement {
         filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(246deg) brightness(104%) contrast(97%);
     }
   `;
+  
+  static isProtected = html`<img src="https://tradeaudit.app/assets/OOjs_UI_icon_lock.svg" width="12" height="12" alt="Protected">`;
+  static isVerified = html`<img src="https://tradeaudit.app/assets/Twitter_Verified_Badge.svg" width="12" height="12" alt="Verified">`;
 
   render() {
     const height = this.height ?? 64;
@@ -107,7 +110,7 @@ export class UserSummary extends LitElement {
                     <div style="display:flex">
                         <img src="${item.twitterProfileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;"/>
                         <div style="text-align:left;padding-left:12px;margin-top:auto;margin-bottom:auto;">
-                            <h5 class="card-title">${item.twitterUserName}</h5>
+                            <h5 class="card-title">${item.twitterUserName} ${item.isProtected == "true" ? isProtected : null}${item.isVerified == "true" ? isVerified : null}</h5>
                             <h6 class="card-subtitle text-muted">@${item.twitterDisplayName}</h6>
                             <span>${item.followerCount} Followers</span>
                         </div>
