--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: empty
 permalink: /
-title: "Trade Audit"
+title: "Trade Audit Mobile App for Fintwit"
 sitemap: true
 author_profile: false
 ---
@@ -110,7 +110,7 @@ export class UserSummary extends LitElement {
                     <div style="display:flex">
                         <img src="${item.twitterProfileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;"/>
                         <div style="text-align:left;padding-left:12px;margin-top:auto;margin-bottom:auto;">
-                            <h5 class="card-title">${item.twitterUserName} ${item.isProtected ? isProtected : null}${item.isVerified ? isVerified : null}</h5>
+                            <h5 class="card-title">${item.twitterUserName} ${item.isProtected ? this.isProtected : null}${item.isVerified ? this.isVerified : null}</h5>
                             <h6 class="card-subtitle text-muted">@${item.twitterDisplayName}</h6>
                             <span>${item.followerCount} Followers</span>
                         </div>
