--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,7 +1,7 @@
 ---
 layout: empty
 permalink: /privacy-policy
-title: "Privacy Policy"
+title: "Privacy Policy - TradeAudit Mobile App"
 sitemap: false
 author_profile: false
 ---
