--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,7 +1,7 @@
 ---
 layout: empty
 permalink: /terms-of-use
-title: "Terms of Use"
+title: "Terms of Use - TradeAudit Mobile App"
 sitemap: false
 author_profile: false
 ---
