--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ sitemap: true
 author_profile: false
 ---
 
-<h1 class="display-5 fw-bold text-center">Stock Tracking for Twitter</h1>
+<h1 class="display-5 fw-bold text-center">Stock Tracking for Financial Twitter</h1>
 
-<p class="lead mb-4">Social media is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> with carefully curated twitter feeds promoting successful trades but hiding all losses.  Do your own due diligence and create audited trade records for accounts you follow before you invest your money.</p>
+<p class="lead mb-4">Social media <a href="https://twitter.com/hashtag/fintwit?src=hashtag_click" target="_blank" class="fw-bold">#fintwit</a> is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> with carefully curated twitter feeds promoting successful trades but hiding all losses.  Do your own due diligence and create audited trade records for accounts you follow before you invest your money.</p>
 
 <h2 class="display-10 fw-bold text-center">Top User Ratings</h2>
 
