--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@ author_profile: false
   Do your due diligence and audit trading records before you invest your money.
 </p>
 
-<p class="fw-bold text-center">Who are the 🤡 and who makes 💰?</p>
-
-<h2 class="display-10 fw-bold text-center">Top User Ratings</h2>
+<h2 class="display-12 mt-5 mb-3 fw-bold text-center">Who is the 🤡 and who makes 💰?</h2>
 
 <script type="module">
 import {LitElement, html, svg, css} from 'https://cdn.jsdelivr.net/gh/lit/dist@2/core/lit-core.min.js';
