--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ author_profile: false
 
 <p class="lead mb-4">
   Social media <a href="https://twitter.com/hashtag/fintwit?src=hashtag_click" target="_blank" class="fw-bold">#fintwit</a> is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>.<br/>
-  Their carefully curated twitter feeds promote successful trades and hide all losses with deleted tweets or misinformation.
-  Do your due diligence and audit trading records before you invest your money.
+  They curate twitter feeds to promote successful trades but hide losses by deleting tweets and posting misinformation.
+  Do your due diligence and audit trading records before you invest your time and money.
 </p>
 
 <h2 class="display-12 mt-5 mb-3 fw-bold text-center">Who is the 🤡 and who makes 💰?</h2>
