--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@ author_profile: false
 
 <h1 class="display-5 fw-bold text-center">Stock Tracking for Financial Twitter</h1>
 
-<p class="lead mb-4">
-  Social media <a href="https://twitter.com/hashtag/fintwit?src=hashtag_click" target="_blank" class="fw-bold">#fintwit</a> is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>.<br/>
+<div class="lead mb-4">
+  <div class="text-center">
+    Social media <a href="https://twitter.com/hashtag/fintwit?src=hashtag_click" target="_blank" class="fw-bold">#fintwit</a> is 
+    full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>.
+  </div>
+  <br/>
   They curate twitter feeds to promote successful trades but hide losses by deleting tweets and posting misinformation.
   Do your due diligence and audit trading records before you invest your time and money.
-</p>
+</div>
 
 <h2 class="display-12 mt-5 mb-3 fw-bold text-center">Who is the 🤡 and who makes 💰?</h2>
 
