--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@ author_profile: false
 
 <h1 class="display-5 fw-bold text-center">Stock Tracking for Financial Twitter</h1>
 
-<div class="lead mb-4">
-  <div class="text-center">
+<span class="lead mb-4" style="text-align: justify;text-justify: inter-word;">
+  <span class="text-center">
     Social media <a href="https://twitter.com/hashtag/fintwit?src=hashtag_click" target="_blank" class="fw-bold">#fintwit</a> is 
     full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>.
-  </div>
-  <br/>
+  </span>
   They curate twitter feeds to promote successful trades but hide losses by deleting tweets and posting misinformation.
   Do your due diligence and audit trading records before you invest your time and money.
-</div>
+</span>
 
 <h2 class="display-12 mt-5 mb-3 fw-bold text-center">Who is the 🤡 and who makes 💰?</h2>
 
