--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ author_profile: false
     Social media <a href="https://twitter.com/hashtag/fintwit?src=hashtag_click" target="_blank" class="fw-bold">#fintwit</a> is 
     full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>.
   </span>
-  They curate twitter feeds to promote successful trades but hide losses by deleting tweets and posting misinformation.
+  They curate twitter feeds to promote successful trading but hide losses by deleting tweets and posting misinformation.
   Do your due diligence and audit trading records before you invest your time and money.
 </span>
 
