--- a/index.html
+++ b/index.html
@@ -102,7 +102,17 @@ export class UserSummary extends LitElement {
   
   static isProtected = html`<img src="https://tradeaudit.app/assets/OOjs_UI_icon_lock.svg" width="18" height="18" style="margin-bottom: 4pt" alt="Protected">`;
   static isVerified = html`<img src="https://tradeaudit.app/assets/Twitter_Verified_Badge.svg" width="18" height="18" style="margin-bottom: 4pt" alt="Verified">`;
-
+  static humanNumber(num){
+    function intlFormat(num){
+      return new Intl.NumberFormat().format(Math.floor(num*10)/10);
+    }
+    if(num >= 1000000)
+      return intlFormat(num/1000000)+'M';
+    if(num >= 1000)
+      return intlFormat(num/1000)+'k';
+    return intlFormat(num);
+  }
+  
   render() {
     const height = this.height ?? 64;
     return html`
@@ -120,7 +130,7 @@ export class UserSummary extends LitElement {
                         <div style="text-align:left;padding-left:12px;margin-top:auto;margin-bottom:auto;">
                             <h5 class="card-title">${item.twitterUserName}${item.isProtected ? UserSummary.isProtected : null}${item.isVerified ? UserSummary.isVerified : null}</h5>
                             <h6 class="card-subtitle text-muted">@${item.twitterDisplayName}</h6>
-                            <span>${item.followerCount} Followers</span>
+                            <span>${UserSummary.humanNumber(item.followerCount)} Followers</span>
                         </div>
                     </div>
                   </a>
