--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ export class StockToolbar extends LitElement {
     return html`
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-        <div class="input-group mb-3" role="group" aria-label="User Sort" style="margin:auto;justify-content:center;">
+        <div class="input-group mt-5 mb-2" role="group" aria-label="User Sorting" style="margin:auto;justify-content:center;">
             <button
                 @click=${() => this.toggleSort(true)}
                 class="btn btn-outline-secondary ${this.isTop ? 'active' : ''}" type="button"
